<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jeannebertoux.kimwili.Controller.ActiviteActivity">

    <TextView
        android:id="@+id/tv_activite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activities"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="42dp"
        android:text="@string/titreActivite"
        android:textColor="#4C221C"
        android:textSize="20sp" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/relativeLayout">


    </RelativeLayout>


   <!-- <ListView
        android:id="@+id/lst_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"> -->


    <!--  </ListView>

<ImageButton
android:id="@+id/ajout_activite"
android:layout_width="match_parent"
android:layout_height="wrap_content" /> -->

    <ImageButton
        android:id="@+id/btn_ajouter"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="13dp"
        android:background="@drawable/border"
        android:contentDescription="@string/desc"
        android:rotation="45"
        android:src="@drawable/close" />

    <Spinner
        android:id="@+id/activities"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/btnActivite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activities"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/button_border"
        android:text="@string/startActivite"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_blue_bright" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_ajouter"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/addActivite"
        android:textColor="#4C221C" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_ajouter"
        android:layout_centerHorizontal="true"
        android:text="@string/addActivite2"
        android:textColor="#4C221C" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/tv_activite"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:background="@drawable/border"
        android:scaleType="fitCenter"
        android:src="@drawable/logokimwili" />

</RelativeLayout>
